rdservices/overlays/gu-test/ns-rds.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: customerrds
    kubernetes.io/metadata.name: customerrds
  name: gurds
spec:
  finalizers:
    - kubernetes
