rdservices/overlays/gu-test/deploy-layer1-port-doris.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: layer1-port-doris
    app.kubernetes.io/instance: customerrds
  name: layer1-port-doris
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: layer1-port-doris
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: layer1-port-doris
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
            - name: ASPNETCORE_URLS
              value: http://+:80
            - name: Domain
              value: sunet.se
            - name: ScieboRds__TokenStorageUrl
              value: http://layer3-token-storage
            - name: S3__Url
              value: dummy
            - name: ManifestIndex__Url
              value: https://snd-storage-metadata-index-test-snd-dev.apps.k8s.gu.se
            - name: ManifestIndex__ApiKey
              valueFrom:
                secretKeyRef:
                  key: api-key
                  name: doris-api-key
            - name: S3__AccessKey
              valueFrom:
                secretKeyRef:
                  key: s3-key
                  name: doris-s3-key
            - name: S3__SecretKey
              valueFrom:
                secretKeyRef:
                  key: s3-secret
                  name: doris-s3-secret
          image: docker.sunet.se/rds/doris-rds:ci-RDS-Connectors-13
          imagePullPolicy: IfNotPresent
          name: doris
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
