rdservices/overlays/gu-test/svc-drive.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: customerrds
  name: customer-drive
spec:
  externalName: sunet.drive.test.sunet.se
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
  sessionAffinity: None
  type: ExternalName
