rdservices/overlays/gu-test/ing-layer0-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: research-data-services.org
    app.kubernetes.io/instance: customerrds
    app.kubernetes.io/name: layer0-web
    app.kubernetes.io/part-of: rds-ingress
    app.kubernetes.io/version: '1.0'
    research-data-services.org/layer: layer0
  name: layer0-web
spec:
  ingressClassName: public
  rules:
    - host: rds-sunet.drive.test.sunet.se
      http:
        paths:
          - backend:
              service:
                name: layer0-web
                port:
                  name: http
            path: /
            pathType: Prefix
